templates/install/resources/address-controller/external-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: enmasse
  name: restapi-external
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    name: address-controller
  type: LoadBalancer
