templates/install/resources/address-controller/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: enmasse
  name: address-controller
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    name: address-controller
  type: ClusterIP
