templates/install/resources/address-controller/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: enmasse
  name: restapi
spec:
  tls:
    termination: passthrough
  to:
    kind: Service
    name: address-controller
